--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: rc_router
 description: A simple but powerful Flutter router.
-version: 0.3.0
+version: 0.4.0
 homepage: https://rushio-consulting.fr
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.0.0
-  pedantic: ^1.8.0+1
+  provider: ^5.0.0
+  pedantic: ^1.11.1
 
 dev_dependencies:
   flutter_test:
